# map-reduce-folds

./: .gitignore  .travis.yml  ChangeLog.md  Readme.md  bench-groupBy.aux  bench-groupBy.hp  bench-groupBy.ps  cabal.project  groupByBench.html  hie.yaml  map-reduce-folds.cabal
bench/: BenchAll.hs  GroupBy.hs  MapReduce.hs
bench/core-html/js/: Main.js
examples/: ListStats.hs  readmeExample.hs
src/Control/: MapReduce.hs
src/Control/MapReduce/: Core.hs  Engines.hs  Gatherer.hs  Parallel.hs  Simple.hs  TypeLevel.hs
src/Control/MapReduce/Engines/: GroupBy.hs  List.hs  Parallel.hs  ParallelList.hs  Streaming.hs  Streamly.hs  Streams.hs  Vector.hs
test/: InspectionTests.hs  Test1.hs  TestAll.hs
