cabal-version:       2.2.0

name:                map-reduce-folds
version:             0.2.0.0
synopsis:            foldl wrappers for map-reduce
description:         wrappers around foldl folds that make it simpler to do map-reduce (or split-apply-combine) style folds.  Includes some general types
                     as well as some simple building blocks and tools for executing the folds in parallel.
-- bug-reports:
license:             BSD-3-Clause
license-file:        LICENSE
author:              Adam Conner-Sax
maintainer:          adam_conner_sax@yahoo.com
-- copyright:
category:            Control
extra-source-files:  CHANGELOG.md    
Build-type: Simple
                     
common deps
  build-depends: base >= 4.11.1.0
               , containers
               , foldl
               , profunctors               

library
  import: deps
  ghc-options: -Wall -O2 -funbox-strict-fields
  exposed-modules: Control.MapReduce
                 , Control.MapReduce.Core
                 , Control.MapReduce.Gatherer
                 , Control.MapReduce.Simple
                 , Control.MapReduce.Parallel

  build-depends:   
                 , hashable
                 , parallel
--                 , sort
                 , split
                 , text
                 , unordered-containers

  hs-source-dirs:      src
  default-language:    Haskell2010

